[project]
name = "beekeeping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "marimo>=0.16.2",
    "mystmd>=1.6.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "tabulate>=0.9.0",
]
